--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- NAVIGATION -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger text-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Net<span class="love">Lover</span></a>
+            <a class="navbar-brand ms-5" href="index.html">Net<span class="love">Lover</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -27,22 +27,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0 m-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home Internet</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home Internet</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Corporate Internet</a>
+                        <a class="nav-link" href="corporate.html">Corporate Internet</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Support</a>
+                        <a class="nav-link" href="support.html">Support</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Bill Pay</a>
+                        <a class="nav-link" href="bill.html">Bill Pay</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <form class="d-flex search-bar">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -53,35 +53,118 @@
     </nav>
 
     <!-- CAROUSEL/SLIDER -->
+    <section id="carousel">
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/router.jpg" class="d-block w-100 slider-img" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Home Internet</h5>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas, asperiores.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/coverage.jpg" class="d-block w-100 slider-img" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Corporate Internet</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, laboriosam.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/internet.jpg" class="d-block w-100 slider-img" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Internet World</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, provident!</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </section>
 
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="images/router.jpg" class="d-block w-100 img-fluid" height="300px" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/coverage.jpg" class="d-block w-100 img-fluid" height="300px" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/internet.jpg" class="d-block w-100 img-fluid" height="300px" alt="...">
+    <!-- WELCOMING -->
+    <id="welcome" class="py-5">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <h5 class="text-danger">Welcome To netLover</h5>
+                    <p class="display-6 lead">We are always Faster & Reliable</p>
+                    <hr class="bg-success">
+
+                    <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt in quis similique
+                        cumque esse inventore corporis quos deleniti ut repellendus architecto fugit neque, accusamus
+                        voluptatum porro exercitationem recusandae impedit doloribus dolores ea ad nobis tempora? Odit
+                        ex modi obcaecati nihil! Corrupti, fugit doloremque ratione aperiam architecto nemo laudantium
+                        pariatur voluptatem.</p>
+                </div>
+                <div class="col-md-6">
+                    <img src="images/about.png" alt="about">
+                </div>
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
+        </section>
+
+        <!-- FOOTER -->
+
+        <section id="footer">
+            <hr>
+            <div class="text-center py-3">
+                <h4 class="mt-3">Only For Wifi User's</h4>
+                <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">
+                    Sign Up
+                </button>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-    </script>
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Your Identity</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <form>
+                                    <div class="mb-3">
+                                        <label for="exampleInputEmail1" class="form-label">Email address</label>
+                                        <input type="email" class="form-control" id="exampleInputEmail1"
+                                            aria-describedby="emailHelp">
+                                        <div id="emailHelp" class="form-text">We'll never share your email with anyone
+                                            else.</div>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="exampleInputPassword1" class="form-label">Password</label>
+                                        <input type="password" class="form-control" id="exampleInputPassword1">
+                                    </div>
+                                    <div class="mb-3 form-check">
+                                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+        </script>
+
 
 </body>
 
