--- a/corporate.html
+++ b/corporate.html
@@ -51,6 +51,157 @@
             </div>
         </div>
     </nav>
-    <h2>We Are Comming Very Soon...</h2>
+
+    <!-- Offer's -->
+    
+    <section id="offers">
+        <div class="container d-flex justify-content-between py-5 text-center">
+            <div class="card" style="width: 18rem;">
+                <i class="fas fa-wifi text-center py-3"></i>
+                <div class="card-body">
+                    <h5 class="card-title bg-danger text-light py-2 mb-3">BASIC</h5>
+                    <span class="card-text display-5 text-warning  speed">15 Mbps</span>
+                    <ul class="limit py-4">
+                        <li>24 HOURS UNLIMITED</li>
+                        <li>Fiber Optics</li>
+                        <li>24/7 Customer Care</li>
+                    </ul>
+                    <a href="#" class="btn btn-primary"><i class="fas fa-shopping-cart text-warning"></i>Buy Now</a>
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <i class="fas fa-wifi text-center py-3"></i>
+                <div class="card-body">
+                    <h5 class="card-title bg-danger text-light py-2 mb-3">PRIMARY</h5>
+                    <span class="card-text display-5 speed text-warning">25 Mbps</span>
+                    <ul class="limit py-4">
+                        <li>24 HOURS UNLIMITED</li>
+                        <li>Fiber Optics</li>
+                        <li>24/7 Customer Care</li>
+                    </ul>
+                    <a href="#" class="btn btn-primary"><i class="fas fa-shopping-cart text-warning"></i>Buy Now</a>
+                </div>
+
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <i class="fas fa-wifi text-center py-3"></i>
+                <div class="card-body">
+                    <h5 class="card-title bg-danger text-light py-2 mb-3">DOMINANT</h5>
+                    <span class="card-text display-5 speed text-warning">50 Mbps</span>
+                    <ul class="limit py-4">
+                        <li>24 HOURS UNLIMITED</li>
+                        <li>Fiber Optics</li>
+                        <li>24/7 Customer Care</li>
+                    </ul>
+                    <a href="#" class="btn btn-primary"><i class="fas fa-shopping-cart text-warning"></i>Buy Now</a>
+
+                </div>
+            </div>
+        </div>
+        <div class="container d-flex justify-content-between py-5 text-center">
+            <div class="card" style="width: 18rem;">
+                <i class="fas fa-wifi text-center py-3"></i>
+                <div class="card-body">
+                    <h5 class="card-title bg-danger text-light py-2 mb-3">CONFIDENT</h5>
+                    <span class="card-text display-5 text-warning  speed">80 Mbps</span>
+                    <ul class="limit py-4">
+                        <li>24 HOURS UNLIMITED</li>
+                        <li>Fiber Optics</li>
+                        <li>24/7 Customer Care</li>
+                    </ul>
+                    <a href="#" class="btn btn-primary"><i class="fas fa-shopping-cart text-warning"></i>Buy Now</a>
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <i class="fas fa-wifi text-center py-3"></i>
+                <div class="card-body">
+                    <h5 class="card-title bg-danger text-light py-2 mb-3">POSITIVE</h5>
+                    <span class="card-text display-5 speed text-warning">100 Mbps</span>
+                    <ul class="limit py-4">
+                        <li>24 HOURS UNLIMITED</li>
+                        <li>Fiber Optics</li>
+                        <li>24/7 Customer Care</li>
+                    </ul>
+                    <a href="#" class="btn btn-primary"><i class="fas fa-shopping-cart text-warning"></i>Buy Now</a>
+                </div>
+
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <i class="fas fa-wifi text-center py-3"></i>
+                <div class="card-body">
+                    <h5 class="card-title bg-danger text-light py-2 mb-3">ADVANCE</h5>
+                    <span class="card-text display-5 speed text-warning">120 Mbps</span>
+                    <ul class="limit py-4">
+                        <li>24 HOURS UNLIMITED</li>
+                        <li>Fiber Optics</li>
+                        <li>24/7 Customer Care</li>
+                    </ul>
+                    <a href="#" class="btn btn-primary"><i class="fas fa-shopping-cart text-warning"></i>Buy Now</a>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- FOOTER -->
+
+    <section id="footer">
+        <hr>
+        <div class="text-center py-3">
+            <h4 class="mt-3">Only For Wifi User's</h4>
+            <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Sign Up
+            </button>
+
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Your Identity</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                                <div class="mb-3">
+                                    <label for="exampleInputEmail1" class="form-label">Email address</label>
+                                    <input type="email" class="form-control" id="exampleInputEmail1"
+                                        aria-describedby="emailHelp">
+                                    <div id="emailHelp" class="form-text">We'll never share your email with anyone
+                                        else.</div>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="exampleInputPassword1" class="form-label">Password</label>
+                                    <input type="password" class="form-control" id="exampleInputPassword1">
+                                </div>
+                                <div class="mb-3 form-check">
+                                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                                </div>
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    </script>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
