--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <id="welcome" class="py-5">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-6">
+                <div class="col-sm-12 col-md-6">
                     <h5 class="text-danger">Welcome To netLover</h5>
                     <p class="display-6 lead">We are always Faster & Reliable</p>
                     <hr class="bg-success">
@@ -106,7 +106,7 @@
                         ex modi obcaecati nihil! Corrupti, fugit doloremque ratione aperiam architecto nemo laudantium
                         pariatur voluptatem.</p>
                 </div>
-                <div class="col-md-6">
+                <div class="col-sm-12 col-md-6">
                     <img src="images/about.png" alt="about">
                 </div>
             </div>
