--- a/corporate.html
+++ b/corporate.html
@@ -11,6 +11,9 @@
         integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
     <title>Wifi Connection</title>
 </head>
 
@@ -53,95 +56,113 @@
     </nav>
 
     <!-- Offer's -->
-    
+
     <section id="offers">
-        <div class="container d-flex justify-content-between py-5 text-center">
-            <div class="card" style="width: 18rem;">
-                <i class="fas fa-wifi text-center py-3"></i>
-                <div class="card-body">
-                    <h5 class="card-title bg-danger text-light py-2 mb-3">BASIC</h5>
-                    <span class="card-text display-5 text-warning  speed">15 Mbps</span>
-                    <ul class="limit py-4">
-                        <li>24 HOURS UNLIMITED</li>
-                        <li>Fiber Optics</li>
-                        <li>24/7 Customer Care</li>
-                    </ul>
-                    <a href="#" class="btn btn-primary"><i class="fas fa-shopping-cart text-warning"></i>Buy Now</a>
+        <div class="container">
+            <div class="row justify-content-between py-5 text-center">
+                <div class="col-md-3">
+                    <div class="card" style="width: 18rem;">
+                        <i class="fas fa-wifi text-center py-3"></i>
+                        <div class="card-body">
+                            <h5 class="card-title bg-danger text-light py-2 mb-3">BASIC</h5>
+                            <span class="card-text display-5 text-warning  speed">15 Mbps</span>
+                            <ul class="limit py-4">
+                                <li>24 HOURS UNLIMITED</li>
+                                <li>Fiber Optics</li>
+                                <li>24/7 Customer Care</li>
+                            </ul>
+                            <h4 class="d-inline-block taka">500৳/MONTH</h4>
+                            <a href="#" class="btn btn-primary"><i class="fas fa-shopping-cart text-warning"></i>Buy
+                                Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 offers">
+                    <div class="card" style="width: 18rem;">
+                        <i class="fas fa-wifi text-center py-3"></i>
+                        <div class="card-body">
+                            <h5 class="card-title bg-danger text-light py-2 mb-3">PRIMARY</h5>
+                            <span class="card-text display-5 speed text-warning">25 Mbps</span>
+                            <ul class="limit py-4">
+                                <li>24 HOURS UNLIMITED</li>
+                                <li>Fiber Optics</li>
+                                <li>24/7 Customer Care</li>
+                            </ul>
+                            <h4 class="d-inline-block taka">800৳/MONTH</h4>
+                            <a href="#" class="btn btn-primary"><i class="fas fa-shopping-cart text-warning"></i>Buy
+                                Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 offers">
+                    <div class="card" style="width: 18rem;">
+                        <i class="fas fa-wifi text-center py-3"></i>
+                        <div class="card-body">
+                            <h5 class="card-title bg-danger text-light py-2 mb-3">DOMINANT</h5>
+                            <span class="card-text display-5 speed text-warning">50 Mbps</span>
+                            <ul class="limit py-4">
+                                <li>24 HOURS UNLIMITED</li>
+                                <li>Fiber Optics</li>
+                                <li>24/7 Customer Care</li>
+                            </ul>
+                            <h4 class="d-inline-block taka">1000৳/MONTH</h4>
+                            <a href="#" class="btn btn-primary"><i class="fas fa-shopping-cart text-warning"></i>Buy
+                                Now</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-
-            <div class="card" style="width: 18rem;">
-                <i class="fas fa-wifi text-center py-3"></i>
-                <div class="card-body">
-                    <h5 class="card-title bg-danger text-light py-2 mb-3">PRIMARY</h5>
-                    <span class="card-text display-5 speed text-warning">25 Mbps</span>
-                    <ul class="limit py-4">
-                        <li>24 HOURS UNLIMITED</li>
-                        <li>Fiber Optics</li>
-                        <li>24/7 Customer Care</li>
-                    </ul>
-                    <a href="#" class="btn btn-primary"><i class="fas fa-shopping-cart text-warning"></i>Buy Now</a>
+            <div class="row justify-content-between py-5 text-center">
+                <div class="col-md-3 offers">
+                    <div class="card" style="width: 18rem;">
+                        <i class="fas fa-wifi text-center py-3"></i>
+                        <div class="card-body">
+                            <h5 class="card-title bg-danger text-light py-2 mb-3">BASIC</h5>
+                            <span class="card-text display-5 text-warning  speed">75 Mbps</span>
+                            <ul class="limit py-4">
+                                <li>24 HOURS UNLIMITED</li>
+                                <li>Fiber Optics</li>
+                                <li>24/7 Customer Care</li>
+                            </ul>
+                            <h4 class="d-inline-block taka">1200৳/MONTH</h4>
+                            <a href="#" class="btn btn-primary"><i class="fas fa-shopping-cart text-warning"></i>Buy
+                                Now</a>
+                        </div>
+                    </div>
                 </div>
-
-            </div>
-
-            <div class="card" style="width: 18rem;">
-                <i class="fas fa-wifi text-center py-3"></i>
-                <div class="card-body">
-                    <h5 class="card-title bg-danger text-light py-2 mb-3">DOMINANT</h5>
-                    <span class="card-text display-5 speed text-warning">50 Mbps</span>
-                    <ul class="limit py-4">
-                        <li>24 HOURS UNLIMITED</li>
-                        <li>Fiber Optics</li>
-                        <li>24/7 Customer Care</li>
-                    </ul>
-                    <a href="#" class="btn btn-primary"><i class="fas fa-shopping-cart text-warning"></i>Buy Now</a>
-
+                <div class="col-md-3 offers">
+                    <div class="card" style="width: 18rem;">
+                        <i class="fas fa-wifi text-center py-3"></i>
+                        <div class="card-body">
+                            <h5 class="card-title bg-danger text-light py-2 mb-3">PRIMARY</h5>
+                            <span class="card-text display-5 speed text-warning">100 Mbps</span>
+                            <ul class="limit py-4">
+                                <li>24 HOURS UNLIMITED</li>
+                                <li>Fiber Optics</li>
+                                <li>24/7 Customer Care</li>
+                            </ul>
+                            <h4 class="d-inline-block taka">1500৳/MONTH</h4>
+                            <a href="#" class="btn btn-primary"><i class="fas fa-shopping-cart text-warning"></i>Buy
+                                Now</a>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="container d-flex justify-content-between py-5 text-center">
-            <div class="card" style="width: 18rem;">
-                <i class="fas fa-wifi text-center py-3"></i>
-                <div class="card-body">
-                    <h5 class="card-title bg-danger text-light py-2 mb-3">CONFIDENT</h5>
-                    <span class="card-text display-5 text-warning  speed">80 Mbps</span>
-                    <ul class="limit py-4">
-                        <li>24 HOURS UNLIMITED</li>
-                        <li>Fiber Optics</li>
-                        <li>24/7 Customer Care</li>
-                    </ul>
-                    <a href="#" class="btn btn-primary"><i class="fas fa-shopping-cart text-warning"></i>Buy Now</a>
-                </div>
-            </div>
-
-            <div class="card" style="width: 18rem;">
-                <i class="fas fa-wifi text-center py-3"></i>
-                <div class="card-body">
-                    <h5 class="card-title bg-danger text-light py-2 mb-3">POSITIVE</h5>
-                    <span class="card-text display-5 speed text-warning">100 Mbps</span>
-                    <ul class="limit py-4">
-                        <li>24 HOURS UNLIMITED</li>
-                        <li>Fiber Optics</li>
-                        <li>24/7 Customer Care</li>
-                    </ul>
-                    <a href="#" class="btn btn-primary"><i class="fas fa-shopping-cart text-warning"></i>Buy Now</a>
-                </div>
-
-            </div>
-
-            <div class="card" style="width: 18rem;">
-                <i class="fas fa-wifi text-center py-3"></i>
-                <div class="card-body">
-                    <h5 class="card-title bg-danger text-light py-2 mb-3">ADVANCE</h5>
-                    <span class="card-text display-5 speed text-warning">120 Mbps</span>
-                    <ul class="limit py-4">
-                        <li>24 HOURS UNLIMITED</li>
-                        <li>Fiber Optics</li>
-                        <li>24/7 Customer Care</li>
-                    </ul>
-                    <a href="#" class="btn btn-primary"><i class="fas fa-shopping-cart text-warning"></i>Buy Now</a>
-
+                <div class="col-md-3 offers">
+                    <div class="card" style="width: 18rem;">
+                        <i class="fas fa-wifi text-center py-3"></i>
+                        <div class="card-body">
+                            <h5 class="card-title bg-danger text-light py-2 mb-3">DOMINANT</h5>
+                            <span class="card-text display-5 speed text-warning">120 Mbps</span>
+                            <ul class="limit py-4">
+                                <li>24 HOURS UNLIMITED</li>
+                                <li>Fiber Optics</li>
+                                <li>24/7 Customer Care</li>
+                            </ul>
+                            <h4 class="d-inline-block taka">2000৳/MONTH</h4>
+                            <a href="#" class="btn btn-primary"><i class="fas fa-shopping-cart text-warning"></i>Buy
+                                Now</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
