--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>Wifi Connection</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&display=swap" rel="stylesheet"> 
 </head>
 
 <body>
@@ -64,7 +67,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/coverage.jpg" class="d-block w-100 slider-img" alt="...">
+                    <img src="images/free.jpeg" class="d-block w-100 slider-img" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Corporate Internet</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, laboriosam.</p>
@@ -92,11 +95,11 @@
     </section>
 
     <!-- WELCOMING -->
-    <id="welcome" class="py-5">
+    <id="welcome" class="pt-5 my-5 welcome">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-sm-12 col-md-6">
-                    <h5 class="text-danger">Welcome To netLover</h5>
+                    <h5 class="text-danger netLover">Welcome To netLover</h5>
                     <p class="display-6 lead">We are always Faster & Reliable</p>
                     <hr class="bg-success">
 
@@ -107,12 +110,26 @@
                         pariatur voluptatem.</p>
                 </div>
                 <div class="col-sm-12 col-md-6">
-                    <img src="images/about.png" alt="about">
+                    <img class="img-fluid" src="images/about.png" alt="about">
                 </div>
             </div>
         </div>
         </section>
 
+        <!-- Grow Business -->
+        <section class="bg-danger text-dark">
+        <div class="container-fluid text-center py-5">
+            <h2>Let your business to grow with us</h2>
+            <p class="lead"> We offer a full range of fast, superfast and ultrafast broadband packages</p>
+        </div>
+        <hr style="height:5px; width:70%; margin-left: 200px; border-width:0; background-color:yellow"> 
+        <div class="container py-5">
+            <strong class="text-warning">BUINESS:</strong> 
+            <p class="lead bus-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque perferendis corrupti ipsum unde ipsam culpa soluta explicabo error ducimus molestias sit, aliquid aspernatur quam rem dolorum hic distinctio perspiciatis labore consequatur delectus dolor. Impedit maiores optio iste? Quos nobis impedit sequi illum esse alias reprehenderit? Adipisci est blanditiis vitae libero iste ipsa? Officia nihil ducimus, blanditiis vitae, consequatur voluptatibus laboriosam dolor fugiat dolores rem cumque quis suscipit dolorum aliquam consectetur consequuntur dolorem velit voluptatem! Nulla, rerum a? Id harum praesentium adipisci illum? Error magni tenetur eveniet fugiat iste molestiae quia placeat ad, quisquam, rerum corrupti hic. Neque in reprehenderit consectetur voluptas cum explicabo obcaecati voluptatem praesentium repellendus, perspiciatis, pariatur nulla temporibus vitae? Non quam, repellendus quo quibusdam animi aliquid, cum delectus harum voluptas minus dolorum eveniet perferendis! Accusamus amet aliquid eligendi animi repellendus vel architecto, placeat corrupti facilis quibusdam ducimus odio vitae hic laudantium incidunt ipsum modi quae nemo reiciendis tempore eius nisi at. Similique dolores perferendis quaerat quis temporibus aut obcaecati, rerum sit at aliquam id, nesciunt excepturi amet aliquid vel earum voluptatem. Tempore odit autem, neque minus libero molestiae ea iste esse hic nihil natus reprehenderit impedit, rerum exercitationem praesentium! Perferendis vero veritatis totam tenetur. Nulla esse tempore, id quisquam facere iusto minima, veritatis voluptatum sint corporis harum cum. Ullam aperiam voluptate voluptas repellendus recusandae magnam voluptatem dolores labore autem tenetur illum fugit ab consequatur excepturi minus ad reprehenderit porro unde, corporis quasi laudantium odio eligendi! Ab cupiditate, placeat repudiandae doloremque nemo magni voluptates laudantium numquam aliquid aliquam consequuntur sit, sint impedit quae pariatur facere eius aperiam fugiat porro maiores maxime deleniti. Fuga, delectus consequuntur autem, adipisci dolor sunt odit assumenda iusto suscipit nulla magnam recusandae! Fugit, sint! Obcaecati, perspiciatis quod maiores officia neque minima necessitatibus possimus facilis porro repudiandae sapiente accusantium omnis provident ipsa? In, et modi?
+            </p> 
+        </div>
+    </section>
+  
         <!-- FOOTER -->
 
         <section id="footer">
